--- a/AlkoApp/app/src/main/res/layout/add_drink_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/add_drink_fragment.xml
@@ -261,7 +261,7 @@
             app:layout_constraintTop_toBottomOf="@id/bartender_stuffs_buttons_row" />
 
         <Spinner
-            android:id="@+id/glass"
+            android:id="@+id/glass_spinner"
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:layout_marginStart="24dp"
@@ -287,7 +287,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/glass" />
+            app:layout_constraintTop_toBottomOf="@id/glass_spinner" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
